# Pet-Assistant

./: DESIGN.md  PRODUCT.md  index.html  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-05-23-v4-acrylic-ui.md
docs/superpowers/specs/: 2026-05-22-v4-acrylic-ui-design.md
hatch-runs/tuxie/: imagegen-jobs.json  pet_request.json
hatch-runs/tuxie-actions/: imagegen-jobs.json  pet_request.json
hatch-runs/tuxie-actions/final/: validation.json
hatch-runs/tuxie-actions/frames/: frames-manifest.json
hatch-runs/tuxie-actions/prompts/: base-pet.md
hatch-runs/tuxie-actions/qa/: review.json  run-summary.json
hatch-runs/tuxie-fluid/prompts/: eating-16-v2.md  eating-16-v3-4x4.md  eating-16.md  eating-8.md  play-ball-16-v3-4x4.md  play-ball-16.md  play-ball-8.md  play-wand-16-v2.md  play-wand-16-v3-4x4.md  play-wand-8.md  sleeping-16-v2.md  sleeping-16-v3-4x4.md  sleeping-8.md
hatch-runs/tuxie-fluid/qa/: eating-16-summary.json  play-ball-16-summary.json  play-wand-16-summary.json  sleeping-16-summary.json  summary.json
hatch-runs/tuxie/final/: validation.json
hatch-runs/tuxie/frames/: frames-manifest.json
hatch-runs/tuxie/qa/: review.json  (+1 more)
scripts/: bridge-store.mjs  build-extended-tuxie-strip.py  install-local-hooks.mjs  map-hook-event.mjs  rebuild-fluid-tuxie-atlas.py
src/: main.js  styles.css  ui-state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
templates/hooks/: claude-hook.sh  codex-hook.sh
tests/: approval-hook-flow.test.mjs  ui-state.test.mjs
(+19 files in other folders)
